@@ -5,6 +5,14 @@ dgm-lib v3.0.0
  * `dgm::Error` replaces `dgm::ErrorMessage`
     * Contains message and a stacktrace
     * This is a `std::expected` version of `dgm::Exception`
+ * `dgm::ResourceManager` has been streamlined
+    * `get` and `getMutable` are now throwing so they can return references directly
+        * No more `.value().get()` pattern
+        * Resource not present is treated as a precondition fail
+    * `LoadCallback` now returns `std::expected<T, dgm::Error>` instead of having an inout T parameter
+        * Resources no longer have to be default-constructible (yay, RAII), but they have to be movable
+        * Two moves are issued per resource load, but that's a price I am willing to pay for RAII
+    * All `dgm::Utility::load*` functions have been adjusted
 
 dgm-lib v2.x.x
  * `dgm::Animation::getSpeed` was marked as noexcept
